# prompt-optimizer

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/prompt_optimizer/: __init__.py  api.py  benchmarks.py  blackboard.py  cache.py  cli.py  envelope.py  fidelity.py  fidelity_llm.py  lazy_ast.py  memory_tokenizer.py  parallel.py  progressive.py  schema_registry.py  streaming.py  tokenizer.py  types.py  verifier.py
src/prompt_optimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/prompt_optimizer/autonomy/: __init__.py  auto_level.py  compression_optimizer.py  fidelity_tuner.py  rule_discovery.py  self_tuning.py
src/prompt_optimizer/grammar/: __init__.py  ast_nodes.py  compiler.py  lexer.py  parser.py  renderer.py  tokens.py  validator.py
src/prompt_optimizer/integrations/: ail_bridge.py  csuite.py  csuite_adapter.py
src/prompt_optimizer/layers/: __init__.py  base.py  contextual.py  (+2 more)
tests/: conftest.py  test_ail_bridge.py  test_blackboard.py  test_blackboard_extended.py  test_cli.py  test_cli_comprehensive.py  test_contextual.py  test_csuite_integration.py  test_envelope.py  test_fidelity.py  test_fidelity_llm.py  test_grammar.py  test_grammar_edge_cases.py  test_grammar_lexer_extended.py  test_grammar_parser_extended.py  test_grammar_renderer_extended.py  test_grammar_validator.py  test_optimizer_layers.py  test_progressive.py  test_runtime_contracts.py  test_runtime_edge_cases.py  test_runtime_executor.py  test_schema_registry.py  test_self_sufficiency.py  test_semantic.py  test_structural.py  test_verifier.py
(+9 files in other folders)
