[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-optimizer"
version = "0.1.0"
description = "Three-layer prompt compression for inter-agent communication"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.7.0"]

llm-judge = ["httpx>=0.27.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
po = "prompt_optimizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
